// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomType transform Explicit CustomType - required 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  location: Location!
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType - with auth 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  location: Location @auth(rules: [{allow: owner, ownerField: "owner"}])
  owner: String
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  location: Location
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Implicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  location: Location
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

type Location 
{
  lat: Float
  long: Float
}"
`;
